# Rusmpp

./: Cargo.toml  Readme.md  cspell.json
.github/workflows/: rusmppyc.yaml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode_owned.rs
rusmpp/: Cargo.toml
rusmpp-core/: Cargo.toml  Readme.md
rusmpp-core/src/: command_id.rs  command_status.rs  decode.rs  encode.rs  fields.rs  lib.rs  macros.rs
rusmpp-core/src/command/: mod.rs  owned.rs
rusmpp-core/src/decode/: borrowed.rs  bytes.rs  error.rs  owned.rs
rusmpp-core/src/pdus/: mod.rs
rusmpp-core/src/tests/: borrowed.rs  mod.rs  owned.rs
rusmpp-core/src/tlvs/: mod.rs
rusmpp-core/src/tokio_codec/: mod.rs  tests.rs
rusmpp-core/src/types/: mod.rs  u16.rs  u32.rs  u8.rs
rusmpp-core/src/udhs/: mod.rs
rusmpp-core/src/values/: addr_subunit.rs  alert_on_msg_delivery.rs  bearer_type.rs  broadcast_area_identifier.rs  broadcast_area_success.rs  broadcast_channel_indicator.rs  broadcast_content_type.rs  broadcast_frequency_interval.rs  broadcast_message_class.rs  callback_num_pres_ind.rs  congestion_state.rs  data_coding.rs  delivery_failure_reason.rs  dest_address.rs  mod.rs  (+27 more)
rusmpp-extra/: Cargo.toml
rusmpp-macros/: Cargo.toml
rusmpp-macros/src/: decode_error.rs  lib.rs  repr.rs  structs.rs
rusmpp-tokio-codec/: Cargo.toml
rusmpp-tokio-codec/src/: codec.rs  error.rs  lib.rs  tests.rs
rusmpp/src/: command.rs  decode.rs  lib.rs  pdus.rs  udhs.rs  values.rs
rusmppc/: Cargo.toml
rusmppc/examples/: http_proxy.rs  insights.rs  managed_client.rs  manual_reconnect.rs  raw_client.rs  rusmppc_submit_sm.rs  rusmppc_submit_sm_multipart.rs
rusmppc/src/: action.rs  builder.rs  client.rs  connection.rs  delay.rs  error.rs  event.rs  event_.rs  lib.rs  managed.rs  managed_.rs  mock.rs  runtime.rs  runtime_.rs  session_state_holder.rs  tests.rs  timeout.rs  timer.rs
rusmpps/: Cargo.toml
rusmpps-lib/: Cargo.toml
rusmpps-lib/examples/: simple.rs
rusmpps-lib/src/: acceptor.rs  bind_request.rs  bind_requet_kind.rs  lib.rs  server.rs
rusmpps/src/: bind_mode.rs  client.rs  connection.rs  handler.rs  lib.rs  main.rs  server.rs
rusmppy/rusmppyc/: Cargo.toml  pyproject.toml
rusmppy/rusmppyo3-reflection/: Cargo.toml
rusmppz/: Cargo.toml
rusmppz/src/: decode.rs  values.rs
(+102 files in other folders)
