[package]
name = "rusmpps"
version = "0.0.0"
edition = "2024"
rust-version = "1.85.0"
description = "A Rust SMPP simulator."
authors = ["Jad K. Haddad <jadkhaddad@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Rusmpp/Rusmpp"
readme = "Readme.md"
keywords = ["smpp", "smsc", "messaging", "networking", "protocol"]
publish = false

[dependencies]
rusmpp = { path = "../rusmpp", default-features = false, features = [
    "tokio-codec",
    "tracing",
] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
tokio-stream = "0.1.18"
futures = "0.3.32"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
anyhow = "1"
pin-project-lite = "0.2.17"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.34"
humantime-serde = "1"
clap = { version = "4.6.1", features = ["derive", "env"] }
dotenvy = "0.15.7"
thiserror = "2"
